--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
     namespace 'com.thuydev.pro1121_appbangiay'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.thuydev.pro1121_appbangiay"
@@ -36,4 +37,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
