--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,14 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRO1121_AppBanGiay"
         tools:targetApi="31">
+        <activity android:name=".ManHinhAdmin"
+            android:exported="false"/>
         <activity
             android:name=".DangKy_Activity"
             android:exported="false" />
         <activity
             android:name=".DangNhap_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".XacNhan_Activity"
             android:exported="false" />
         <activity
             android:name=".ManHinhKhoiDau_Activity"
@@ -33,9 +32,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
     </application>
 
 </manifest>
