--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.thuydev.pro1121_appbangiay"
+        applicationId "com.thuydev.pro1121appbangiay"
         minSdk 26
         targetSdk 33
         versionCode 1
