--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,8 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRO1121_AppBanGiay"
         tools:targetApi="31">
-        <activity android:name=".ManHinhAdmin"
-            android:exported="false"/>
+        <activity
+            android:name=".ManHinhAdmin"
+            android:exported="false" />
         <activity
             android:name=".DangKy_Activity"
             android:exported="false" />
@@ -32,6 +34,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ManHinhKhachHang"
+            android:exported="false" />
+        <activity
+            android:name=".ManHinhNhanVien"
+            android:exported="false" />
     </application>
 
 </manifest>
