--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRO1121_AppBanGiay"
         tools:targetApi="31">
+        <activity
+            android:name=".SeeSanPham"
+            android:exported="false" />
+        <activity
+            android:name=".ShowMore"
+            android:exported="false" />
         <activity
             android:name=".ManHinhAdmin"
             android:exported="false" />
@@ -38,7 +45,6 @@
         <activity
             android:name=".ManHinhKhachHang"
             android:exported="false" />
-
         <activity
             android:name=".ManHinhNhanVien"
             android:exported="false" />
